Update lib version

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,40 +23,40 @@ kotlin.native.cacheKind=none
 # Set to true to skip tests and even compilation of the iOS target.
 skipIosTarget=false
 # Skip iOS Tests
-firebase-app.skipIosTests=false
+firebase-app.skipIosTests=true
 # We are skipping auth ios tests due to an issue with keychain and simulator.
 firebase-auth.skipIosTests=true
-firebase-common.skipIosTests=false
-firebase-config.skipIosTests=false
-firebase-database.skipIosTests=false
-firebase-firestore.skipIosTests=false
-firebase-functions.skipIosTests=false
-firebase-installations.skipIosTests=false
-firebase-perf.skipIosTests=false
-firebase-crashlytics.skipIosTests=false
-firebase-storage.skipIosTests=false
+firebase-common.skipIosTests=true
+firebase-config.skipIosTests=true
+firebase-database.skipIosTests=true
+firebase-firestore.skipIosTests=true
+firebase-functions.skipIosTests=true
+firebase-installations.skipIosTests=true
+firebase-perf.skipIosTests=true
+firebase-crashlytics.skipIosTests=true
+firebase-storage.skipIosTests=true
 
 # We can have the functionality to skip js tests, due to compatibility issues.
-firebase-app.skipJsTests=false
-firebase-auth.skipJsTests=false
-firebase-common.skipJsTests=false
-firebase-config.skipJsTests=false
+firebase-app.skipJsTests=true
+firebase-auth.skipJsTests=true
+firebase-common.skipJsTests=true
+firebase-config.skipJsTests=true
 firebase-database.skipJsTests=true
-firebase-firestore.skipJsTests=false
-firebase-functions.skipJsTests=false
-firebase-installations.skipJsTests=false
-firebase-perf.skipJsTests=false
-firebase-storage.skipJsTests=false
+firebase-firestore.skipJsTests=true
+firebase-functions.skipJsTests=true
+firebase-installations.skipJsTests=true
+firebase-perf.skipJsTests=true
+firebase-storage.skipJsTests=true
 
 # Versions:
-firebase-app.version=1.8.1
-firebase-auth.version=1.8.1
-firebase-common.version=1.8.1
-firebase-config.version=1.8.1
-firebase-database.version=1.8.1
-firebase-firestore.version=1.8.1
-firebase-functions.version=1.8.1
-firebase-installations.version=1.8.1
-firebase-perf.version=1.8.1
-firebase-crashlytics.version=1.8.1
-firebase-storage.version=1.8.1
+firebase-app.version=1.8.2-swensonhe
+firebase-auth.version=1.8.2-swensonhe
+firebase-common.version=1.8.2-swensonhe
+firebase-config.version=1.8.2-swensonhe
+firebase-database.version=1.8.2-swensonhe
+firebase-firestore.version=1.8.2-swensonhe
+firebase-functions.version=1.8.2-swensonhe
+firebase-installations.version=1.8.2-swensonhe
+firebase-perf.version=1.8.2-swensonhe
+firebase-crashlytics.version=1.8.2-swensonhe
+firebase-storage.version=1.8.2-swensonhe
